# 2020-Advent-of-Code

./: .gitignore  README.md  input.json
2020/inputs/: sample.txt
2020/js/: package.json
2020/js/src/: 01.js  02.js  03.js  04.js
2020/js/src/__tests__/: 01.js  02.js  03.js  04.js  parseInput.js
2020/js/utils/: logicalDoors.js  parseInput.js
2020/rust/: Cargo.toml
2020/rust/src/: main.rs
2021/js/: README.md  package.json
2021/js/src/: 01.js  02.js  03.js
2021/js/src/__tests__/: 01.js  02.js  03.js  parseInput.js
2021/rust/src/: main.rs
2022/: Cargo.toml  README.md
2022/src/: lib.rs  solver.rs
2022/src/days/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs  template.rs
2022/src/util/: mod.rs
2024/: 03.rs  04.md  05.rs  06.rs  07.rs  08.rs  1.rs  2.rs  4.rs  flake.nix
days/: 1.js  2.js
