[package]
name = "aoc_2022"
version = "0.0.0"
edition = "2021"

[dependencies]
ahash = "0.8"
criterion = "0.5"
dhat = "0.3"
paste = "1"

[dependencies.lexical-core]
version = "0.8"
default-features = false
features = ["parse-integers"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
